--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==1.0.3
 Flask-Login==0.4.1
 Flask-MySQLdb==0.2.0
 Flask-SQLAlchemy==2.4.0
+Flask-WTF==0.14.2
 itsdangerous==1.1.0
 jdcal==1.4.1
 Jinja2==2.10.1
@@ -18,3 +19,4 @@ PyMySQL==0.9.3
 soupsieve==1.9.2
 SQLAlchemy==1.3.5
 Werkzeug==0.15.4
+WTForms==2.2.1
