--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 beautifulsoup4==4.7.1
+Bootstrap-Flask==1.0.10
 Click==7.0
+dominate==2.3.5
 et-xmlfile==1.0.1
 Flask==1.0.3
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-MySQLdb==0.2.0
 Flask-SQLAlchemy==2.4.0
@@ -18,5 +21,6 @@ peewee==3.9.6
 PyMySQL==0.9.3
 soupsieve==1.9.2
 SQLAlchemy==1.3.5
+visitor==0.1.3
 Werkzeug==0.15.4
 WTForms==2.2.1
